--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
 <body>
     <h1>It's Dream Mentor.</h1>
 </body>
-  <script> window.alert("It's Dream Mentor."); </script>
+  <script>
+    window.addEventListener('load', function() {
+      setTimeout(function() {
+        alert("It's Dream Mentor.");
+      }, 2000); 
+    });
+  </script>
 </html>
