--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>It's Dream Mentor.</title>
+    <title>It's Dream Mentor and Dragon Slayer II</title>
 </head>
 <body>
-    <h1>It's Dream Mentor.</h1>
+    <h1>It's Dream Mentor and Dragon Slayer II</h1>
 </body>
   <script>
     window.addEventListener('load', function() {
       setTimeout(function() {
-        alert("It's Dream Mentor.");
+        alert("It's Dream Mentor and Dragon Slayer II");
       }, 2000); 
     });
   </script>
